# project_euler_cpp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cmake/: AddEulerProblem.cmake  CompilerWarnings.cmake  ProjectOptions.cmake
docs/problems/: 0001.md  0002.md  0003.md  0004.md  0005.md  0006.md  0007.md  0008.md  0009.md  0010.md  0011.md  0012.md  0013.md  0014.md  0015.md  0016.md  0017.md  0018.md  0019.md  0020.md  0021.md  0022.md  0023.md  0024.md  0025.md  0026.md  0027.md  0028.md  0029.md  0030.md  README.md
docs/templates/: problem.md
include/project_euler/: math.hpp  project_euler.hpp
problems/: CMakeLists.txt  p0001.cpp  p0002.cpp  p0003.cpp  p0004.cpp  p0005.cpp  p0006.cpp  p0007.cpp  p0008.cpp  p0009.cpp  p0010.cpp  p0011.cpp  p0012.cpp  p0013.cpp  p0014.cpp  p0015.cpp  p0016.cpp  p0017.cpp  p0018.cpp  p0019.cpp  p0020.cpp  p0021.cpp  p0022.cpp  p0023.cpp  p0024.cpp  p0025.cpp  p0026.cpp  p0027.cpp  p0028.cpp  p0029.cpp  p0030.cpp  problem_template.cpp
src/: CMakeLists.txt
src/project_euler/: math.cpp
tests/: CMakeLists.txt  math_test.cpp
